# CollatzConjectureSimulator

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  device_requirement.txt  device_requirements.md  synchronisation.md  synchronisation.txt
cmake/: Config.cmake  Definitions.cmake  Headers.cmake  Libraries.cmake  Options.cmake
common/: CMakeLists.txt  alloc.c  alloc.h  common.h  debug.c  debug.h  def.h  defs.c  defs.h  file.c  file.h  support.h  util.c  util.h  wrap.c  wrap.h  wrap_posix.c  wrap_posix.h  wrap_stdc.c  wrap_stdc.h  wrap_win32.c  wrap_win32.h
dynamic/: CMakeLists.txt  dyarray.c  dyarray.h  dynamic.c  dynamic.h  dyqueue.c  dyqueue.h  dyrecord.c  dyrecord.h  dystring.c  dystring.h
inc/: defs.h
lib/: CMakeLists.txt
shader/: CMakeLists.txt  shader.comp
shaders/: CMakeLists.txt  shader.comp  shader_128.comp  shader_16_128.comp  shader_16_256.comp  shader_16_64_128.comp  shader_16_64_256.comp  shader_256.comp  shader_64_128.comp  shader_64_256.comp
src/: CMakeLists.txt  cli.c  cli.h  config.c  config.h  debug.c  debug.h  defs.c  defs.h  dyarray.c  dyarray.h  dymemory.c  dymemory.h  dyqueue.c  dyqueue.h  dyrecord.h  dystring.c  dystring.h  gpu.c  gpu.h  main.c  shader.comp  shader64.comp  shader_16.comp  shader_16_64.comp  shader_64.comp  util.c  util.h
